Finished the stories page? Needs to match up with the php later.

--- a/stories.html
+++ b/stories.html
@@ -112,7 +112,10 @@
                 };
             };
             storyGetterAgain.open("POST", "getdogstories.php");
-            storyGetterAgain.send(numForSend);
+            var forSend = {
+                initialrequest: numForSend
+            };
+            storyGetterAgain.send(forSend);
         }
 
         showMoreButtonElem.addEventListener("click", getStoriesAgain());
