Some formatting changes to the text.

--- a/flightbuddy.html
+++ b/flightbuddy.html
@@ -61,7 +61,20 @@
         <div id="flightbuddyimage"><img src="https://ypaprescue.files.wordpress.com/2017/03/slide3-e1489734714235.jpg"></div>
         <!-- Below is the text taken straight from the YPAP page. -->
         <div id="text">
-            Couriers are people flying internationally who are willing to check in a dog under their name at the airport. The pound will arrange everything and there is no cost to you. Usually only DIRECT flights work for sending an animal on a plane due to long flight times and airline regulations. If you are not flying direct, please let us know and we can try to arrange a dog to fly IN CABIN with you, under the seat. Most commonly we need flights to SFO, LAX, JFK, SEA, ORD, IAD, YVR, YYZ, VIE, MUC.
+            <h2>Become a Flight Buddy!</h2>
+            Couriers are people flying internationally who are willing to check in a dog under their name at the airport.
+            <br>
+            <br>
+            The pound will arrange everything and there is no cost to you.
+            <br>
+            <br>
+            Usually only DIRECT flights work for sending an animal on a plane due to long flight times and airline regulations.
+            <br>
+            <br>
+            If you are not flying direct, please let us know and we can try to arrange a dog to fly IN CABIN with you, under the seat.
+            <br>
+            <br>
+            Most commonly we need flights to SFO, LAX, JFK, SEA, ORD, IAD, YVR, YYZ, VIE, MUC.
         </div>
     </div>
     <div id="bottomwrapper">
