--- a/aboutus.html
+++ b/aboutus.html
@@ -14,9 +14,15 @@
             padding: 0px;
             font-family: sans-serif;
         }
+        #aboutusimage {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         img {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 90%;
+            max-height: 90%;
+            margin: 10px;
         }
         #text {
             display: inline-block;
@@ -27,6 +33,11 @@
                 display: flex;
                 justify-content: center;
             } */
+            img {
+                max-width: 40%;
+                max-height: 40%;
+                margin: 10px;
+            }
         }
     </style>
 </head>
