--- a/flightbuddy.html
+++ b/flightbuddy.html
@@ -17,9 +17,15 @@
             font-family: sans-serif;
         }
 
+        #flightbuddyimage {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         img {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 90%;
+            max-height: 90%;
+            margin: 10px;
         }
 
         #text {
@@ -44,13 +50,13 @@
         }
 
         @media screen and (min-width: 481px) {
-
-            #everythingwrapper {
-                display: flex;
-                justify-content: center;
-            }
             input, textarea {
                 outline: none;
+            }
+            img {
+                max-width: 40%;
+                max-height: 40%;
+                margin: 10px;
             }
         }
 
