--- a/newsletters.html
+++ b/newsletters.html
@@ -14,9 +14,15 @@
             padding: 0px;
             font-family: sans-serif;
         }
+        #newsletterimage {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         img {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 90%;
+            max-height: 90%;
+            margin: 10px;
         }
         #text {
             display: inline-block;
@@ -32,9 +38,10 @@
             margin: 20px;
         }
         @media screen and (min-width: 481px) {
-            #everythingwrapper {
-                display: flex;
-                justify-content: center;
+            img {
+                max-width: 40%;
+                max-height: 40%;
+                margin: 10px;
             }
             input, textarea {
                 outline: none;
