Tweaked button margins.

--- a/stories.html
+++ b/stories.html
@@ -45,7 +45,7 @@
             padding: 10px 20px 10px 20px;
             border: 1px solid grey;
             float: right;
-            margin-right: 30px;
+            margin: 10px 30px 10px 0;
             border-radius: 5px;
             background-color: lightblue;
             font-size: 1em;
