--- a/volunteer_page.html
+++ b/volunteer_page.html
@@ -231,7 +231,7 @@ input[type='text'], input[type='email'], input[type='date'], input[type='tel']{
                     <div class="title" id="form_title">
                         Want to participate? <br> Please write a form.
                     </div>
-                    <div class="field"><span class="f_title">Name </span> <input id="name" name="name" type="text"><span id="required"> (Required)</span></div>
+                    <div class="field"><span class="f_title">Name </span> <input id="name" name="name" type="text" placeholder="Your name"><span id="required"> *</span></div>
                     <div class="field"><span class="f_title">Phone</span>
                         <!-- country codes (ISO 3166) and Dial codes. -->
                         <select name="phone" id="countryCode">
@@ -451,9 +451,9 @@ input[type='text'], input[type='email'], input[type='date'], input[type='tel']{
                         	<option data-countryCode="ZW" value="263">Zimbabwe (+263)</option>
                         	<!-- </otgroup> -->
                         </select> 
-                        <input id="phoneNumber" name="phone" type="tel"><span id="required"> (Required)</span>
+                        <input id="phoneNumber" name="phone" type="tel" placeholder="0000 - 0000 - 0000 - 0000"><span id="required"> *</span>
                     </div>
-                    <div class="field"><span class="f_title">E-mail</span> <input id="email" name="email" type="email"><span id="required"> (Required)</span></div>
+                    <div class="field"><span class="f_title">E-mail </span> <input id="email" name="email" type="email" placeholder="sofia1234@domain.com"><span id="required"> *</span></div>
                     <div class="field">
                         <div class="f_title"><span>Work Type (Prefereces)</span></div>
                         <div id="workType_text">Please choose 1 or 2 work types.</div>
@@ -532,7 +532,24 @@ input[type='text'], input[type='email'], input[type='date'], input[type='tel']{
         }
     }
 
-    var phoneInputs = document.querySelectorAll("input[name='phone']");
+    var phoneInput = document.querySelector("input[name='phone']");
+    phoneInput.addEventListener("change", isValidPhoneNum);
+
+    /*The placehoder of the phone number data'll recommend the proper format '0000- 0000- 0000' 
+      which means that a phone number input can only include spaces(" ") or "-". */
+    function isValidPhoneNum(){
+        var insertedPhoneNum = this.value;
+        insertedPhoneNum = insertedPhoneNum.replace("-", "");
+        insertedPhoneNum = insertedPhoneNum.replace(" ", "");
+        var parsedToInt = parseInt(insertedPhoneNum);
+        console.log("ParsedToInt -> " + parsedToInt);
+        console.log("isInt? -> " + Number.isInteger(insertedPhoneNum));
+
+        if( parseInt(insertedPhoneNum) < 0 || !(Number.isInteger(insertedPhoneNum))){
+            alert("Valid phone number. Please enter an available phone number.");
+        }
+    }
+
     
     var emailInput = document.getElementById("email");
     emailInput.addEventListener("change", isValidEmail);
