Made a few small changes to css

--- a/ourdogs.html
+++ b/ourdogs.html
@@ -19,6 +19,7 @@
         text-align:center;
         border: #cccccc solid 2px;
         padding: 10px;
+        min-width: 90%;
         }
     .dogProfile {
         display:flex;
@@ -232,7 +233,7 @@
         display: none; /* Hidden by default */
         position: fixed; /* Stay in place */
         z-index: 0; /* Sit on top */
-        padding-top: 22%; /* Location of the box */
+        padding-bottom: 23%; /* Location of the box */
         left: 0;
         top: 0;
         width: 100vw; /* Full width */
