Moved all DB table creation into one script. Using dump files for data and tables. Reconfigured for utf8mb4 character sets.

--- a/donation.html
+++ b/donation.html
@@ -102,7 +102,7 @@
                         }
                     }
                     var forSend = JSON.stringify(forSend);
-                    donateAjax.open("POST", ".php");
+                    donateAjax.open("POST", "back/donorinfo.php");
                     donateAjax.send(forSend);
                         
                 }
@@ -120,7 +120,7 @@
                         }
                     }
                     var forSend = JSON.stringify(forSend);
-                    donateAjax.open("POST", ".php");
+                    donateAjax.open("POST", "back/donorinfo.php");
                     donateAjax.send(forSend);
                 }
                 
