--- a/flightbuddy.html
+++ b/flightbuddy.html
@@ -135,7 +135,7 @@
                 }
             }
             var outGoingFlightBuddyInfo = JSON.stringify(flightBuddyFormInfo);
-            flightBuddyAjax.open("POST", "sendflightform.php");
+            flightBuddyAjax.open("POST", "back/sendflightform.php");
             flightBuddyAjax.send(outGoingFlightBuddyInfo);
         }
 
