--- a/ourdogs.html
+++ b/ourdogs.html
@@ -355,7 +355,7 @@
             // };
     
             
-            xhttp.open("POST", "getdogprofile.php");
+            xhttp.open("POST", "back/getdogprofile.php");
                 var messageObj = {
                     whattoget: "all"
                 }
