--- a/volunteer_page.html
+++ b/volunteer_page.html
@@ -231,12 +231,8 @@ input[type='text'], input[type='email'], input[type='date'], input[type='tel']{
                     <div class="title" id="form_title">
                         Want to participate? <br> Please write a form.
                     </div>
-<<<<<<< HEAD
                     <div class="field"><span class="f_title">Name </span> <input id="name" name="name" type="text" placeholder="Your name"><span id="required"> *</span></div>
-=======
-                    <div class="field"><span class="f_title">Name </span> <input id="name" name="name" type="text"><span id="required"> *</span></div>
->>>>>>> master
-                    <div class="field"><span class="f_title">Phone</span>
+                    <div class="field"><span class="f_title" placeholder = "000 - 0000 - 0000">Phone</span>
                         <!-- country codes (ISO 3166) and Dial codes. -->
                         <select name="phone" id="countryCode">
                             <option data-countryCode="KR" value="82">Korea South (+82)</option>
@@ -455,15 +451,9 @@ input[type='text'], input[type='email'], input[type='date'], input[type='tel']{
                         	<option data-countryCode="ZW" value="263">Zimbabwe (+263)</option>
                         	<!-- </otgroup> -->
                         </select> 
-<<<<<<< HEAD
                         <input id="phoneNumber" name="phone" type="tel" placeholder="0000 - 0000 - 0000 - 0000"><span id="required"> *</span>
                     </div>
                     <div class="field"><span class="f_title">E-mail </span> <input id="email" name="email" type="email" placeholder="sofia1234@domain.com"><span id="required"> *</span></div>
-=======
-                        <input id="phoneNumber" name="phone" type="tel"><span id="required"> *</span>
-                    </div>
-                    <div class="field"><span class="f_title">E-mail</span> <input id="email" name="email" type="email"><span id="required"> *</span></div>
->>>>>>> master
                     <div class="field">
                         <div class="f_title"><span>Work Type (Prefereces)</span></div>
                         <div id="workType_text">Please choose 1 or 2 work types.</div>
