lang.list added.

--- a/dogshelter.html
+++ b/dogshelter.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <style>
+
+@media screen and (min-width: 481px) {
         /* * {outline: 1px solid red} */
         body {
             padding: 0px;
@@ -19,7 +21,8 @@
         #navigationbar {
             height: 160px;
             width: 100%;
-
+            display: flex;
+            justify-content: space-between;
         }
 
         #logodiv{
@@ -66,7 +69,22 @@
             justify-content: center;
         }
 
-        @media screen and (max-width: 481px) {
+        #chooseLang {
+            display: inline-flex;
+            border: 1px solid #0e5ba9;
+            border-radius: 3px;
+            width: 60px;
+            height: 30px;
+            vertical-align: top;
+            font-family: sans-serif;
+            font-weight: bold;
+            margin-top: 3%;
+            margin-right: 5%;
+        }
+}
+
+
+ @media screen and (max-width: 481px) {
 
             #navigationbar {
                 height: 85px;
@@ -88,8 +106,8 @@
                 border-radius: 40px;
                 margin-left: 10px;
                 margin-top: 5px;
-
             }
+
             #logostyle {
                 width: 55px;
                 height: 55px; 
@@ -114,15 +132,35 @@
                 border-bottom: 1px solid #1D4872;
                 width: 300px;
             }
-        }
 
+        #chooseLang {
+            display: inline-block;
+            border: 1px solid #0e5ba9;
+            border-radius: 3px;
+            width: 60px;
+            height: 30px;
+            margin-left: 130px;
+            margin-bottom: 20px;
+            font-family: sans-serif;
+            font-weight: bold;
+        }
+}
     </style>
 </head>
 <body>
     <div id="navigationbar"><!--navigation mobile-->
         <div id="logodiv"><img id="logostyle" src="https://scontent.ficn1-1.fna.fbcdn.net/v/t1.0-1/p200x200/14183908_1770779633197617_2897900196827827557_n.jpg?_nc_cat=0&oh=c13c6f9ed243a5160d34fa95007d071e&oe=5B85E2A6"></div>
+        
+        <select id="chooseLang"><!--mobile lang. options-->
+            <option class="langOptions">En.</option>
+            <option class="langOptions">Kr.</option>
+            <option class="langOptions">Russ.</option>
+            <option class="langOptions">Fr.</option>
+        </select>
+        
         <div id="mobilemenubutton"><i class="fas fa-bars"></i></div>
     </div>
+
     <div id="menudiv"><!--mobile menu options-->
         <div class="menuoptions">About Us</div>
         <div class="menuoptions">Flight Buddy</div>
