I changed the wrong dbname to the right name.

--- a/foster.html
+++ b/foster.html
@@ -220,7 +220,7 @@
                 }
             }
             var outGoingFosterInfo = JSON.stringify(fosterFormInfo);
-            fosterAjax.open("POST", "sendflightform.php");
+            fosterAjax.open("POST", "sendfosterform.php");
             fosterAjax.send(outGoingFosterInfo);
         }
     </script>
