Added JS variables for language selector elements

--- a/dogshelter.html
+++ b/dogshelter.html
@@ -181,6 +181,17 @@
         var menuOptions = document.querySelectorAll(".menuoptions");
         var mobileMenu = document.querySelector("#menudiv");
         var mobileMenuButton = document.querySelector("#mobilemenubutton");
+        var menuEnglishElem = document.querySelector("#menuenglish");
+        var menuKoreanElem = document.querySelector("#menukorean");
+        var menuRussianElem = document.querySelector("#menurussian");
+        var menuFrenchElem = document.querySelector("#menufrench");
+        var menuSwedishElem = document.querySelector("#menuswedish");
+
+        menuEnglishElem.addEventListener("Click");
+        menuKoreanElem.addEventListener("Click");
+        menuRussianElem.addEventListener("Click");
+        menuFrenchElem.addEventListener("Click");
+        menuSwedishElem.addEventListener("Click");
 
 
         for (var i = 0; i < menuOptions.length; i++) {
