Changed wording of alert.

--- a/flightbuddy.html
+++ b/flightbuddy.html
@@ -158,7 +158,7 @@
                 //Below makes sure that the info entered in the phone number section is a number.
                 var phoneNumberInput = phoneNumber.value;
                 if (phoneNumberInput.length > 20) {
-                    alert("Phone numbers must be under 20 characters.");
+                    alert("Phone numbers must be 20 characters or less.");
                 }
                 else submitInformation(); //This calls the function that submits the entered information to the php!
             }
