--- a/foster.html
+++ b/foster.html
@@ -193,10 +193,9 @@
                     alert("Please enter a valid email address.");
                 }
                 //Below makes sure that the info entered in the phone number section is a number.
-                var phoneNumberInputString = phoneNumber.value;
-                var phoneNumberInput = parseInt(phoneNumberInputString);
-                if ((phoneNumberInput / 1) !== phoneNumberInput) {
-                    alert("Please enter a valid phone number.")
+                var phoneNumberInput = phoneNumber.value;
+                if (phoneNumberInput.length > 20) {
+                    alert("Phone numbers must be 20 characters or less.")
                 }
                 else submitInformation(); //This calls the function that submits the entered information to the php!
             }
