change donate button

--- a/homepage.html
+++ b/homepage.html
@@ -164,9 +164,14 @@
         display:block;
     }
 
-    .donate > a:visited {
+    .donateArea > a {
         color: white;
-        text-decoration: none;
+        text-decoration: none; 
+    }
+
+    .donateArea > a:visited {
+        color: white;
+        text-decoration: none; 
     }
 
     .menudiv {
@@ -336,7 +341,7 @@
         <div class="menudiv"></div><!--make space for donate button at the bottom-->
 
         <div class="donateArea">
-            <a href="">Donate<i class="far fa-heart"></i></a></div>
+            <a href="">Donate <i class="far fa-heart"></i></a></div>
     </div>
 
     <div id="bottommenuwrapper"><!--desktop-->
