--- a/dogshelter.html
+++ b/dogshelter.html
@@ -186,14 +186,14 @@
     </div>
 
     <div id="menudiv"><!--mobile menu options-->
-        <div class="menuoptions">About Us</div>
-        <div class="menuoptions">Flight Buddy</div>
-        <div class="menuoptions">Foster</div>
-        <div class="menuoptions">Volunteer</div>
-        <div class="menuoptions">Donations</div>
-        <div class="menuoptions">Stories</div>
-        <div class="menuoptions">Contact Us</div>
-        <div class="menuoptions">News Letters</div>
+        <div class="menuoptions"><a href="aboutus.html">About Us</a></div>
+        <div class="menuoptions"><a href="flightbuddy.html">Flight Buddy</a></div>
+        <div class="menuoptions"><a href="foster.html">Foster</a></div>
+        <div class="menuoptions"><a href="volunteer.html">Volunteer</a></div>
+        <div class="menuoptions"><a href="donation.html">Donations</a></div>
+        <div class="menuoptions"><a href="stories.html">Stories</a></div>
+        <div class="menuoptions"><a href="contactus.html">Contact Us</a></div>
+        <div class="menuoptions"><a href="newsletters.html">News Letters</a></div>
     </div>
 
     <script>
